--- a/portfolio.html
+++ b/portfolio.html
@@ -22,21 +22,26 @@
 
 <body>
     <header class="portfolio-header"></header>
-    <section class="portfolio">
-        <h2 class="portfolio-title">Mi<br> Portfolio</h2>
-        <img class="portfolio-img" src="./img/image 1.png" alt="">
-        <template id="contenedor-portfolio">
-            <div class="card">
-                <img src="./img/image-portfolio.png" alt="" class="portfolio-card_img">
-                <h3 class="portfolio-card_title">Trabjo 1</h3>
-                <p class="portfolio-card_description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed
-                    similique necessitatibus provident commodi? Cum cupiditate dolores illum vel rem odio architecto
-                    perferendis hic assumenda magnam a cumque, ad quasi inventore!
-                </p>
-                <a class="portfolio-link" href="https://google.com.ar" target="_blank">Ver Aquí</a>
-            </div>
-        </template>
-    </section>
+
+    <div class="contenedor-portfolio">
+        <section class="mi-portfolio">
+            <h2 class="portfolio-title">Mi<br> Portfolio</h2>
+            <img class="portfolio-img" src="./img/image 1.png" alt="">
+        </section>
+        <section class="portfolio">
+            <template id="contenedor-portfolio-dos">
+                <div class="card">
+                    <img src="./img/image-portfolio.png" alt="" class="portfolio-card_img">
+                    <h3 class="portfolio-card_title">Trabjo 1</h3>
+                    <p class="portfolio-card_description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed
+                        similique necessitatibus provident commodi? Cum cupiditate dolores illum vel rem odio architecto
+                        perferendis hic assumenda magnam a cumque, ad quasi inventore!
+                    </p>
+                    <a class="portfolio-link" href="https://google.com.ar" target="_blank">Ver Aquí</a>
+                </div>
+            </template>
+        </section>
+    </div>
     <section class="portfolio-footer"></section>
 </body>
 
